--- a/project/package.json
+++ b/project/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@beyond-js/landing-page",
+	"name": "@beyond-js/landing-pages",
 	"version": "0.0.1",
-	"title": "React Landing Page",
+	"title": "Landing Pages",
 	"description": "",
 	"license": "ISC",
 	"layout": "main-layout",
@@ -32,6 +32,8 @@
 		"@beyond-js/kernel": "~0.1.8",
 		"@beyond-js/local": "~0.1.3",
 		"@beyond-js/react-18-widgets": "~0.0.1",
+		"@beyond-js/svelte-widgets": "^0.1.1",
+		"@beyond-js/vue-widgets": "^0.1.1",
 		"socket.io-client": "^4.5.4"
 	},
 	"devDependencies": {
