--- a/project/package.json
+++ b/project/package.json
@@ -38,7 +38,8 @@
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.26",
-		"@types/react-dom": "^18.0.9"
+		"@types/react-dom": "^18.0.9",
+		"netlify-cli": "^16.4.0"
 	},
 	"static": {
 		"includes": [
